ChangeLog 
==========
- by default skip any merge where library_id already exists and target=library
- library_type added
- Replaced npg_common::irods::Loader with WTSI::NPG::HTS::Publisher

release 2.0
- Changes in order to merge libraries not tracked in SequenceScape
- Upfront checking of accessions and headers added
- renaming of generator and merging scripts with npg_ prefix and dropping .pl suffix
- daemon modules, script and tests
- LSF resources merged into initial bsub command
- qc sub-directory and bam_flagstats.json added
- changed irodsEnvFile variable in tests to be unique to melt

release 1.0
- sample_acc_check attribute added. Check for change in composition component count.
- load_only option removed
- run_dir attribute location change and tests updated
- restrict_to_chemistry attribute e.g. to limit to HiSeqX runs 
- LSF attributes lsf_num_processors and lsf_runtime_limit (default 24 hours)
- Loading of additional stats files now optional
- LSF command changed to use -n 3 and resources of span[host=1]
- minimum_component_count attribute added with default of 6
- irods_disconnect function added (temp)
- outirodsdir and genome_reference_fasta flags supplied to vtfp.pl command line
- iRODS permission changes required for streaming output direct to iRODS 
- additional stats files
- samtools executable attribute
- reorganisation of code and module names
- remove target=library attribute if sub/super library set exists in iRODS
- optionally remove outdata files on loading
- tar of log files uploads to iRODS
- status sub-directory added and check for existance of completed merge directory
- removed unused logging code
- load_only option added
- seq_merge tokens now used to limit concurrent jobs, optional value via seq_merge_tokens option
- bamcheck file no longer produced so removed from iRODS data to add
- option to randomly choose between iRODS replicate 0 and 1
- get iRODS location using baton. 
- check if library merge job is in the LSF queue already 