@@ -1,5 +1,9 @@
 ChangeLog 
 ==========
+ 
+- make adjustments for composition-based bamflagstats autoqc result object
+- use factory for creating compositions
+- do not sort compositions - they are returned sorted by any of the factories
 - by default skip any merge where library_id already exists and target=library
 - library_type added
 - Replaced npg_common::irods::Loader with WTSI::NPG::HTS::Publisher
